<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!-- Header: logo + title + menu -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            app:title="@string/app_name"
            app:titleTextColor="@color/text_primary"
            app:navigationIcon="@drawable/ic_menu_builder"
            app:menu="@menu/main_menu" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Konten scroll -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingBottom="32dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnApkFile"
                style="@style/MenuButton"
                android:text="@string/menu_apk_file" />

            <Button
                android:id="@+id/btnInstalledApp"
                style="@style/MenuButton"
                android:text="@string/menu_installed_app" />

            <Button
                android:id="@+id/btnBuilder"
                style="@style/MenuButton"
                android:text="@string/menu_builder"
                android:drawableStart="@drawable/ic_menu_builder"
                android:drawableTint="@color/primary" />

            <Button
                android:id="@+id/btnLearnCode"
                style="@style/MenuButton"
                android:text="@string/menu_learn_code"
                android:drawableStart="@drawable/ic_menu_learn"
                android:drawableTint="@color/primary" />

            <Button
                android:id="@+id/btnTheme"
                style="@style/MenuButton"
                android:text="@string/menu_theme"
                android:drawableStart="@drawable/ic_menu_theme"
                android:drawableTint="@color/primary" />

            <Button
                android:id="@+id/btnProjects"
                style="@style/MenuButton"
                android:text="@string/menu_projects" />

            <Button
                android:id="@+id/btnSettings"
                style="@style/MenuButton"
                android:text="@string/menu_settings" />

            <Button
                android:id="@+id/btnExit"
                style="@style/MenuButton"
                android:text="@string/menu_exit" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
